--- a/chat-app-backend/pom.xml
+++ b/chat-app-backend/pom.xml
@@ -59,6 +59,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.18.1</version> <!-- Make sure to use the version compatible with your Spring version -->
+		</dependency>
 	</dependencies>
 
 	<build>
